--- a/force-app/main/default/lwc/pmkrafullview/pmkrafullview.html
+++ b/force-app/main/default/lwc/pmkrafullview/pmkrafullview.html
@@ -177,7 +177,7 @@
 														key={answer.answerId}></lightning-helptext>
 													<lightning-input-rich-text label-visible label="Description"
 														required key={answer.answerId} name="Description"
-														value={answer.answerValue} disabled formats={formats}
+														value={answer.answerValue} disabled
 														disabled-categories="INSERT_CONTENT">
 													</lightning-input-rich-text>
 												</div>
@@ -233,7 +233,7 @@
 														key={answer.answerId}></lightning-helptext>
 													<lightning-input-rich-text label-visible label="Description"
 														required key={answer.answerId} name="Description"
-														value={answer.answerValue} disabled formats={formats}
+														value={answer.answerValue} disabled
 														disabled-categories="INSERT_CONTENT">
 													</lightning-input-rich-text>
 												</div>
@@ -288,7 +288,7 @@
 														key={answer.answerId}></lightning-helptext>
 													<lightning-input-rich-text label-visible label="Description"
 														required key={answer.answerId} name="Description"
-														value={answer.answerValue} disabled formats={formats}
+														value={answer.answerValue} disabled
 														disabled-categories="INSERT_CONTENT">
 													</lightning-input-rich-text>
 												</div>
@@ -343,7 +343,7 @@
 														key={answer.answerId}></lightning-helptext>
 													<lightning-input-rich-text label-visible label="Description"
 														required key={answer.answerId} name="Description"
-														value={answer.answerValue} disabled formats={formats}
+														value={answer.answerValue} disabled
 														disabled-categories="INSERT_CONTENT">
 													</lightning-input-rich-text>
 												</div>
