--- a/force-app/main/default/lwc/kratable/kratable.html
+++ b/force-app/main/default/lwc/kratable/kratable.html
@@ -248,7 +248,7 @@
           <div class="slds-modal__content slds-p-around_medium" id="modal-content-id-8">
                 <p><i></i></p> <br/>
                 <div class="c-container">
-                  <c-view-p-m-requests receivedkraid={selectedKraQuaterly} tab={tab}  > </c-view-p-m-requests> 
+                  <c-view-p-m-requests receivedkraid={selectedKraQuaterly} tab={tab} viewonlymode={viewonlymode} > </c-view-p-m-requests> 
                 </div>
 
           </div>
